--- a/pages/templates/landing.html
+++ b/pages/templates/landing.html
@@ -122,6 +122,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-sm-6">
+                            <div class="d-flex align-items-center" style="padding-left: 50px;">
+                                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-success">
+                                    <i class="fa-brands fa-whatsapp text-white"></i>
+                                </div>
+                                <div class="ms-3">
+                                    <p class="mb-2">WhatsApp</p>
+                                    <a href="https://wa.me/254701547400" target="_blank" style="color: #02245B"><h5 class="mb-0">+254 701 547 400</h5></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -517,6 +528,14 @@
         </div>
     </div>
     <!-- Testimonial End -->
+    
+    <!-- Whatsapp start -->
+    <div class="contact-whatsapp-cta">
+        <h4><a data-toggle="collapse" href="#whatsapp-cta-detail" class="" aria-expanded="true">
+        <i class="fa-brands fa-whatsapp text-white"></i>
+        <span class="d-none d-md-inline"> Enquire on Whatsapp</span></a></h4>
+            <div id="whatsapp-cta-detail" class="bg-light collapse show" style="">WhatsApp <a href="https://wa.me/254701547400" target="_blank">0788&nbsp;888838</a> for assistance. We're happy to help!</div>
+    </div>
 
 
     <!-- Footer Start -->
@@ -528,6 +547,7 @@
                     <h5 class="text-white mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>PEP, B7 Muthaiga Suites, Nairobi, Kenya</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254701547400</p>
+                    <p class="mb-2"><a style="color:#B0B9AE;" target="_blank" href="https://wa.me/254701547400"><i class="fa-brands fa-whatsapp me-3"></i>+254701547400</a></p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@juniorsecondarylab.co.ke</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-dark rounded-circle me-2" href=""><i
