--- a/pages/templates/navbar.html
+++ b/pages/templates/navbar.html
@@ -16,8 +16,10 @@
             <a href="#about" class="nav-item nav-link">About</a>
             <a href="#services" class="nav-item nav-link">Services</a>
             <a href="#cont" class="nav-item nav-link">Contact</a>
+            <a href="https://wa.me/254701547400" target="_blank" class="nav-item nav-link">WhatsApp</a>
+            
         </div>
-        <a href="{% url 'quote' %}" class="btn btn-success px-3 d-none d-lg-block">Our Prices</a>
+        <a href="{% url 'quote' %}" class="btn btn-success px-3 d-none d-lg-block" style="color:#FFFFF">Our Prices</a>
     </div>
 </nav>
 <!-- Navbar End -->
