--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -48,7 +48,12 @@
 {% include "navbar.html" %}
 
 {% block content %}
-
+<div class="contact-whatsapp-cta">
+    <h4><a data-toggle="collapse" href="#whatsapp-cta-detail" class="collapsed" aria-expanded="false">
+     <i class="fa-brands fa-whatsapp text-white"></i>
+    <span class="d-none d-md-inline"> Enquire on Whatsapp</span></a></h4>
+    <div id="whatsapp-cta-detail" class="bg-light collapse" style="">WhatsApp <a href="https://wa.me/254701547400" target="_blank">0788&nbsp;888838</a> for assistance. We're happy to help!</div>
+</div>
 {% endblock content %}
 </body>
 </html>
