--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,7 @@ h6,
     transition: .5s;
     font-weight: 500;
     background-color: var(--primary);
+    color: var(--light);
 }
 
 .btn-primary,
