--- a/jsslabs/static/css/style.css
+++ b/jsslabs/static/css/style.css
@@ -23,7 +23,7 @@
     color: rgb(226, 226, 226);
 }
 .bg-success{
-    color:var(--dark);
+    color:var(--primary);
 }
 
 .text-success{
@@ -77,6 +77,7 @@ h6,
     transition: .5s;
     font-weight: 500;
     background-color: var(--primary);
+    color: var(--dark);
 }
 
 .btn-primary,
@@ -85,7 +86,7 @@ h6,
 }
 
 .btn-success{
-    color:var(--primary);
+    color: var(--dark);
 }
 
 .btn-square {
@@ -694,6 +695,31 @@ h6,
     transform: scale(1);
 }
 
+/*** Whatsapp ***/
+.contact-whatsapp-cta {
+    position: fixed;
+    z-index: 100;
+    bottom: 100px;
+    right: 0;
+    left: auto;
+    color: #000;
+    top: auto;
+    background: var(--primary);
+    border-radius: 10px 0 0 10px;
+    box-shadow: 0 0 5px #000;
+}
+
+
+.contact-whatsapp-cta h4 a {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
 
 /*** Footer ***/
 .footer {
